HTML / CSS Modifications: - Modified the packery grid, going to add  pictures to the div in the future - played with the sizing of the .grid-item, having issues with spacing of the divs
JavaScript/Jquery Modifications:
- loaded the draggabilly js library, was able to get the dragging added to the page

README.md modifications:
- None

TODO:
- Add Github api / integrate my projects into site
- Add personal content to the site
- Styling needs a lot of work, the form looks bad.

--- a/css/hero_style.css
+++ b/css/hero_style.css
@@ -29,13 +29,11 @@ body {
     display: none;
 }
 
-
-
-
 /* ---- grid ---- */
 
 .grid {
     background: #DDD;
+    max-width: 1200px;
 }
 
 /* clear fix */
@@ -45,21 +43,44 @@ body {
     clear: both;
 }
 
-/* ---- .grid-item ---- */
+/* ---- .element-item ---- */
 
+/* 5 columns, percentage width */
+.grid-sizer,
 .grid-item {
-    width: 33.333%;
+    width: 25vw;
 }
 
 .grid-item {
     float: left;
+    width: 25vw;
+    height: 40vh;
+    background: #C09;
+    border: 2px solid hsla(0, 0%, 0%, 0.5);
 }
 
-.grid-item img {
-    display: block;
-    max-width: 100%;
+/*.grid-item--width2 { width: 100px; }*/
+/*.grid-item--height2 { height: 100px; }*/
+
+/* highlight drag & drop */
+.grid-item:hover {
+    border-color: hsla(0, 0%, 100%, 0.5);
+    cursor: move;
 }
 
+/* Draggabilly adds is-dragging */
+.grid-item.is-dragging,
+.grid-item.is-positioning-post-drag {
+    background: #C90;
+    z-index: 2;
+}
+
+.packery-drop-placeholder {
+    outline: 3px dashed hsla(0, 0%, 0%, 0.5);
+    outline-offset: -6px;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+}
 
 span.arrow {
     height: 50px;
